fix: outer page loading css: z-index 10000 => 20

--- a/src/pages/OuterPage/OuterPage.css
+++ b/src/pages/OuterPage/OuterPage.css
@@ -3,7 +3,7 @@
     position: absolute;
     height: 100%;
     width:100%;
-    z-index: 10000;
+    z-index: 20;
 }
 .ant-spin-container{
     height: 100%;
